first four colleges completed

--- a/src/app/colleges/act-chennai/act-chennai.component.html
+++ b/src/app/colleges/act-chennai/act-chennai.component.html
@@ -10,9 +10,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    University Departments of Anna
-                    University, ACT Campus,
-                    Guindy, Chennai-600025
+                    {{title}}
                 </div>
             </div>
             <br>
@@ -89,4 +87,4 @@
 </div>
 
 
-<app-details-form *ngIf="Next"></app-details-form>
+<app-act-chennai-details *ngIf="Next"></app-act-chennai-details>
