--- a/src/app/colleges/anna-university-coimbatore/anna-university-coimbatore.component.html
+++ b/src/app/colleges/anna-university-coimbatore/anna-university-coimbatore.component.html
@@ -10,7 +10,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    Anna University Regional Campus, Coimbatore-641046
+                    {{title}}
                 </div>
             </div>
             <br>
@@ -87,4 +87,4 @@
 </div>
 
 
-<app-details-form *ngIf="Next"></app-details-form>
+<app-anna-university-coimbatore *ngIf="Next"></app-anna-university-coimbatore>
