--- a/src/app/colleges/alagapa/alagapa.component.html
+++ b/src/app/colleges/alagapa/alagapa.component.html
@@ -10,9 +10,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    Alagappa Chettair Government
-                    College of Engineering and
-                    Technology, (Autonomous)
+                    {{title}}
                 </div>
             </div>
             <br>
@@ -89,4 +87,4 @@
 </div>
 
 
-<app-details-form *ngIf="Next"></app-details-form>
+<app-alagapa-details *ngIf="Next"></app-alagapa-details>
