--- a/src/app/colleges/anna-university-tirunelveli/anna-university-tirunelveli.component.html
+++ b/src/app/colleges/anna-university-tirunelveli/anna-university-tirunelveli.component.html
@@ -10,7 +10,7 @@
         <div class="cont-rows">
             <div class="college" style="text-align: center;">
                 <div class="college-name">
-                    Anna University Regional Campus, Tirunelveli-627007
+                    {{title}}
                 </div>
             </div>
             <br>
@@ -87,4 +87,4 @@
 </div>
 
 
-<app-details-form *ngIf="Next"></app-details-form>
+<app-anna-university-tirunelveli *ngIf="Next"></app-anna-university-tirunelveli>
