admin page added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,9 @@
 
 
 <!-- <app-forgot-password></app-forgot-password> -->
-<app-login></app-login>
+<router-outlet></router-outlet>
+
+<!-- <app-login></app-login> -->
 <!-- <app-gce-salem></app-gce-salem> -->
 <!-- <app-gce-salem-details></app-gce-salem-details> -->
 <!-- <app-gce-salem-viewform></app-gce-salem-viewform> -->
