--- a/src/app/colleges/act-chennai/act-chennai.component.html
+++ b/src/app/colleges/act-chennai/act-chennai.component.html
@@ -86,5 +86,6 @@
     </div>
 </div>
 
+<!-- <router-outlet></router-outlet> -->
 
 <app-act-chennai-details *ngIf="Next"></app-act-chennai-details>
