--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,7 +53,8 @@
             <button class="btn btn-primary mt-4" style=" border-radius: 14px;" [disabled]="registerForm.invalid">Login
             </button>
 
-            <div (click)="forgot()" style="margin-left: 190px; margin-top: 10px;"> Forgot password ? </div>
+            <div (click)="forgot()" style="margin-left: 190px; margin-top: 10px; cursor: pointer;"> Forgot password ?
+            </div>
 
         </form>
 
