till gct coimbatore finished

--- a/src/app/colleges/gce-tirunelveli/gce-tirunelveli.component.html
+++ b/src/app/colleges/gce-tirunelveli/gce-tirunelveli.component.html
@@ -87,4 +87,4 @@
 </div>
 
 
-<app-details-form *ngIf="Next"></app-details-form>
+<app-gce-tirunelveli-details *ngIf="Next"></app-gce-tirunelveli-details>
