--- a/src/app/colleges/gct-coimbatore/gct-coimbatore.component.html
+++ b/src/app/colleges/gct-coimbatore/gct-coimbatore.component.html
@@ -87,4 +87,4 @@
 </div>
 
 
-<app-details-form *ngIf="Next"></app-details-form>
+<app-gct-coimbatore-details *ngIf="Next"></app-gct-coimbatore-details>
