--- a/src/app/colleges/gce-salem/gce-salem-viewform/gce-salem-viewform.component.html
+++ b/src/app/colleges/gce-salem/gce-salem-viewform/gce-salem-viewform.component.html
@@ -85,6 +85,8 @@
             </tr>
 
         </table>
-        <button class="btn btn-outline-primary " (click)="printout()">Print</button>
+        <button class="btn btn-outline-primary m-3" routerLink="/gce-salem-details">Back</button>
+
+        <button class="btn btn-outline-primary m-3" (click)="printout()">Print</button>
     </div>
 </div>
