admin path seted

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-        <div class="d-flex flex-wrap justify-content-end">
-            <div class="">menu</div>
-            <div class="">sdf</div>
-        </div>
+<nav>
+    <div class="navbar_1">
+        <div class="child m-2"><a routerLink="">Home</a></div>
+        <div class="child m-2"><a routerLink="/admin-login">Admin</a></div>
+        <div class="child m-2"><a routerLink="/uni-login">University Admin</a></div>
+
     </div>
 </nav>
