--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
       TAMILNADU</p>
   </div>
 </header>
-<!-- <app-navbar></app-navbar> -->
+<app-navbar></app-navbar>
 
 <!-- <router-outlet></router-outlet> -->
 
