--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,15 @@
 <nav>
     <div class="navbar_1">
-        <div class="child m-2"><a routerLink="">Home</a></div>
-        <div class="child m-2"><a routerLink="/admin-login">Admin</a></div>
-        <div class="child m-2"><a routerLink="/uni-login">University Admin</a></div>
+
+        <div class="child m-2"><a routerLink=""><img class="m-2" src="assets/home_logo.png" alt="" style="width: 30px;">
+                Home</a>
+        </div>
+        <span>|</span>
+        <div class="child m-2"><a routerLink="/admin-login"><img class="m-2" src="assets/profile.png" alt=""
+                    style="width: 30px;">Admin</a></div>
+        <span>|</span>
+        <div class="child m-2"><a routerLink="/uni-login"><img class="m-2" src="assets/school.png" alt=""
+                    style="width: 30px;">University Admin</a></div>
 
     </div>
 </nav>
