--- a/src/app/admin-university/admin-university-viewpage/admin-university-viewpage.component.html
+++ b/src/app/admin-university/admin-university-viewpage/admin-university-viewpage.component.html
@@ -101,7 +101,7 @@
             </tr>
 
         </table>
-        <button class="btn btn-outline-primary m-3" routerLink="/gce-salem-details">Back</button>
+        <button class="btn btn-outline-primary m-3" routerLink="/uni-admin">Back</button>
 
         <button class="btn btn-outline-primary m-3" (click)="printout()">Print</button>
     </div>
