--- a/src/app/colleges/gce-salem/gce-salem-viewform/gce-salem-viewform.component.html
+++ b/src/app/colleges/gce-salem/gce-salem-viewform/gce-salem-viewform.component.html
@@ -7,6 +7,7 @@
 
             </div>
             <tr>
+                <th class="col-sm-4 col-form-label" id="input">Id </th>
                 <th class="col-sm-4 col-form-label" id="input">Academic Year </th>
                 <th class="col-sm-4 col-form-label" id="input">Year of Study</th>
                 <th class="col-sm-4 col-form-label" id="input">Semester </th>
@@ -25,9 +26,15 @@
                 <th class="col-sm-4 col-form-label" id="input"> Any Arrears </th>
                 <th class="col-sm-4 col-form-label" id="input"> Lack of Attendance</th>
                 <th class="col-sm-4 col-form-label" id="input"> Remarks</th>
+                <th class="col-sm-4 col-form-label" id="input"> Stipend</th>
+                <th class="col-sm-4 col-form-label" id="input"> Transition No</th>
+                <th class="col-sm-4 col-form-label" id="input"> Date</th>
 
             </tr>
             <tr *ngFor="let data of datas">
+                <td>
+                    {{data._id}}
+                </td>
                 <td>
                     {{data.academic}}
                 </td>
@@ -81,6 +88,15 @@
                 </td>
                 <td>
                     {{data.remark}}
+                </td>
+                <td>
+                    {{data.stipend}}
+                </td>
+                <td>
+                    {{data.transition}}
+                </td>
+                <td>
+                    {{data.date}}
                 </td>
             </tr>
 
