--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,8 +1,13 @@
 .navbar_1 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-end;
+    justify-content: space-around;
+}
 
+.time_zone {
+    display: block;
+    position: absolute;
+    margin-left: right;
 }
 
 .child {
@@ -18,4 +23,8 @@ a {
 
 a:hover {
     color: blue;
+}
+
+span {
+    margin-top: 18px;
 }
