--- a/src/app/admin-login/adminpage/adminpage.component.html
+++ b/src/app/admin-login/adminpage/adminpage.component.html
@@ -1,7 +1,10 @@
 <div>
     <div class="rows mt-4" style="text-align: center;">
-        <div class="input-box d-flex flex-wrap justify-content-center">
-            <input type="text" [(ngModel)]="filteredString" class="form-control" placeholder="Id...">
+        <div class="input-box d-flex flex-wrap justify-content-end">
+            <div class="">
+                <input id="bars" type="text" [(ngModel)]="filteredString" class="form-control" placeholder="Id...">
+
+            </div>
         </div>
         <p class="mt-1" style="font-size: 35px;">Students Details</p>
 
