--- a/src/app/colleges/gce-salem/gce-salem.component.html
+++ b/src/app/colleges/gce-salem/gce-salem.component.html
@@ -16,7 +16,7 @@
             <br>
             <br>
 
-            <div style="text-align: center;">
+            <div class="mt-5" style="text-align: center;">
                 <table class=" table-borderless mt-3">
                     <tbody>
                         <tr>
@@ -62,7 +62,7 @@
                         <tr class="mt-2">
                             <td id="tab-1">Principle Name</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">Dr.Malayalamuruthi (Phno : 9443441416)</td>
+                            <td id="tab-3">Dr.Malayalamurthi (Phno : 9443441416)</td>
                         </tr>
                         <tr class="mt-2">
                             <td id="tab-1">College Contact No</td>
@@ -78,7 +78,7 @@
 
             <div class="college-btn" style="text-align: center;">
 
-                <button class="btn btn-outline-primary mt-4" style=" border-radius: 15px;width: 100px; height: 50px;"
+                <button class="btn btn-outline-primary m-4 " style=" border-radius: 15px;width: 100px; height: 50px;"
                     (click)="nxtpage()" routerLink="/gce-salem-details">
                     Next
                 </button>
