--- a/src/app/admin-university/admin-university-viewpage/admin-university-viewpage.component.html
+++ b/src/app/admin-university/admin-university-viewpage/admin-university-viewpage.component.html
@@ -1,5 +1,11 @@
 <div>
     <div class="rows mt-4" style="text-align: center;">
+        <div class="input-box d-flex flex-wrap justify-content-end">
+            <div class="">
+                <input id="bars" type="text" [(ngModel)]="filteredString" class="form-control" placeholder="Id...">
+
+            </div>
+        </div>
         <p class="mt-1" style="font-size: 35px;">Students Details</p>
 
         <table class="mt-3 view_table table table-border" id="excel-table">
@@ -31,7 +37,7 @@
                 <th class="col-sm-4 col-form-label" id="input"> Date</th>
 
             </tr>
-            <tr *ngFor="let data of datas">
+            <tr *ngFor="let data of datas | filter: filteredString">
                 <td>
                     {{data._id}}
                 </td>
