--- a/src/app/colleges/act-chennai/act-chennai.component.html
+++ b/src/app/colleges/act-chennai/act-chennai.component.html
@@ -16,8 +16,8 @@
             <br>
             <br>
 
-            <div style="text-align: center;">
-                <table class=" table-borderless">
+            <div class="mt-5" style="text-align: center;">
+                <table class=" table-borderless mt-3">
                     <tbody>
                         <tr>
                             <td id="tab-1">Taluk</td>
@@ -39,36 +39,37 @@
                             <td id="tab-2">:</td>
                             <td id="tab-3">636011</td>
                         </tr>
+                        <tr>
+                            <td id="tab-1">Email-ID</td>
+                            <td id="tab-2">:</td>
+                            <td id="tab-3">prinicipal@gcesalem.edu.in</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
             <br>
             <br>
-            <h1 style="text-decoration: underline;">Contact :</h1>
+            <h1 style="text-decoration: underline;" class="contact_align">Contact :</h1>
             <br>
             <div class="college-cont" style="text-align: center;">
                 <table class=" table-borderless">
                     <tbody>
-                        <tr>
+                        <tr class="mt-2">
                             <td id="tab-1">Chairman</td>
                             <td id="tab-2">:</td>
                             <td id="tab-3"></td>
                         </tr>
-                        <tr>
+                        <tr class="mt-2">
                             <td id="tab-1">Principle Name</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">Dr.sdfsdf (Phno : 9487564005)</td>
+                            <td id="tab-3">Dr.Malayalamuruthi (Phno : 9443441416)</td>
                         </tr>
-                        <tr>
+                        <tr class="mt-2">
                             <td id="tab-1">College Contact No</td>
                             <td id="tab-2">:</td>
-                            <td id="tab-3">044-22359101</td>
+                            <td id="tab-3">0427-2346102 </td>
                         </tr>
-                        <tr>
-                            <td id="tab-1">Email-ID</td>
-                            <td id="tab-2">:</td>
-                            <td id="tab-3">deanact@annauniv.edu</td>
-                        </tr>
+
                     </tbody>
                 </table>
             </div>
@@ -77,8 +78,8 @@
 
             <div class="college-btn" style="text-align: center;">
 
-                <button class="btn btn-outline-primary mt-4" style=" border-radius: 15px;width: 100px; height: 50px;"
-                    (click)="nxtpage()">
+                <button class="btn btn-outline-primary m-4 " style=" border-radius: 15px;width: 100px; height: 50px;"
+                    (click)="nxtpage()" routerLink="/act-chennai-details">
                     Next
                 </button>
             </div>
@@ -86,6 +87,4 @@
     </div>
 </div>
 
-<!-- <router-outlet></router-outlet> -->
-
-<app-act-chennai-details *ngIf="Next"></app-act-chennai-details>
+<router-outlet></router-outlet>
