--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,10 +6,10 @@
         </div>
         <span>|</span>
         <div class="child m-2"><a routerLink="/admin-login"><img class="m-2" src="assets/profile.png" alt=""
-                    style="width: 30px;">Admin</a></div>
+                    style="width: 30px;">DOTE Login</a></div>
         <span>|</span>
         <div class="child m-2"><a routerLink="/uni-login"><img class="m-2" src="assets/school.png" alt=""
-                    style="width: 30px;">University Admin</a></div>
+                    style="width: 30px;">Admin Login</a></div>
 
     </div>
 </nav>
